CXBOX-1179 | Fixed. Front. The names of buttons in the action group are cut off

--- a/ui/src/components/Operations/components/OperationsGroup.less
+++ b/ui/src/components/Operations/components/OperationsGroup.less
@@ -1,9 +1,5 @@
 @import '../../../assets/styles/theme';
 
-.overlayContainer {
-  width: 257px;
-}
-
 .overlayContainer :global(.ant-menu-vertical) {
   border-radius: 8px;
   box-shadow: 0 8px 24px rgba(187, 201, 217, 0.2);
